<resources>
    <string name="app_name">Practical07</string>
    <string name="TAG">MainActivity</string>
    <string name="on_data_available">onDataAvailable - %1$s</string>
    <string name="on_error">onError - %1$s</string>
    <string name="base_url">http://ws.audioscrobbler.com/2.0/</string>
    <string name="method">artist.gettopalbums</string>
    <string name="api_key">58384a2141a4b9737eacb9d0989b8a8c</string>
    <string name="format">json</string>
    <string name="album_image">Album Image</string>
    <string name="album_name">Name: %1$s</string>
    <string name="play_count">Play Count: %1$s</string>
    <string name="action_main">Main</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_search">Search</string>
    <string name="search_label">Search Artist</string>
    <string name="search_hint">Search Artist</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="rate_us_title">Rate this app</string>
    <string name="rate_us_message">If you enjoy using this app, would \n you take a minute to rate this app?</string>
    <string name="rate_us_now">Rate Now</string>
    <string name="rate_us_no_thanks">No Thanks</string>
    <string name="playlist_menu">Menu</string>
    <string name="menu_update">Update</string>
    <string name="menu_delete">Delete</string>
    <string name="action_playlist">Playlist</string>
    <string name="add_new_playlist_name">Add new playlist name&#8230;</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="update_playlist">Update Playlist</string>
    <string name="add_playlist">Add New Playlist</string>
    <string name="delete_item">Delete Playlist Item</string>
    <string name="delete_playlist_item">Are you sure you want to delete this playlist item?</string>
    <string name="builder_positive">OK</string>
    <string name="builder_negative">Cancel</string>
    <string name="playlist_name">Name: %1$s</string>
    <string name="playlist_date">Date: %1$s</string>
    <string name="action_map">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>