<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rate_us_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/rate_us_title"
        android:textSize="@dimen/size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rate this app" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rate_us_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_50"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_us_title_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rate_us_msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/rate_us_message"
        android:textSize="@dimen/size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_us_rating_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_us_no_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="@dimen/margin_64"
        android:text="@string/rate_us_no_thanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_us_msg_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_us_now_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginEnd="@dimen/margin_64"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/rate_us_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_us_no_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>